...
@Composable
fun LogoutAction(onLogout: () -> Unit) {
    val icon = painterResource(R.drawable.ic_logout)
    IconButton(onClick = onLogout) {
        Icon(
            icon,
            "Logout",
            Modifier
                .padding(8.dp)
        )
    }
}

@Composable
fun AboutAction(onClick: () -> Unit) {
    val icon = painterResource(R.drawable.ic_baseline_info)
    IconButton(onClick = onClick) {
        Icon(
            icon,
            "About",
            Modifier
                .padding(8.dp)
        )
    }
}

