...
}

@Composable
private fun SignUpLink(modifier: Modifier, onSignupClick: () -> Unit) {
    Text(
        text = buildAnnotatedString {
            append("Don't have an account? Signup")
            addStyle(SpanStyle(color = MaterialTheme.colors.primary), 23, this.length)
            toAnnotatedString()
        },
        style = typography.subtitle1,
        modifier = modifier
            .padding(vertical = 24.dp, horizontal = 16.dp)
...
